--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body class="body">
     <header class="header">
+        <div class="top"></div>
         <div class="logoBox">
             <img src="assets/img/logo.png" alt="logo Amazon" class="logo">
         </div>
@@ -38,13 +39,30 @@
         </div>
     </header>
     <main class="main">
-        <div class="shopHoliday"></div>
-        <div class="holidayGuides"></div>
-        <div class="perfectGift"></div>
-        <div class="gameGift"></div>
-        <div class="soundGift"></div>
+
+        <div class="shopHoliday">
+            <p>Shop All Holiday Gift Cards</p>
+        </div>
+        <div class="holidayGuides">
+            <h1>Holiday Gift Guides</h1>
+            <h2>be a go-Gifter</h2>
+        </div>
+        <div class="perfectGift"><img src="./assets/img/img_1.jpg" alt="foto Kindle"><img src="./assets/img/img_2.jpg"
+                alt="foto Studio"><img src="./assets/img/img_3.jpg" alt="foto Smartwatch"><img
+                src="./assets/img/img_4.jpg" alt="foto Pets"></div>
+        <div class="gameGift">
+            <img src="assets/img/img_9.png" alt="Immagine Regalo VR">
+            <figcaption class="caption">Play the gifting game <span class="fakeLink">Shop gaming</span></figcaption>
+        </div>
+        <div class="soundGift"><img src="assets/img/img_10.png" alt="Immagine Regalo Sound">
+            <figcaption class="caption">Play the gifting game <span class="fakeLink">Shop gaming</span></figcaption>
+        </div>
+
     </main>
     <footer class="footer">
+        <div class="anchor">
+            <a href="#top" class="backToTop">Back to Top</a>
+        </div>
         <div class="footerLogoBox">
             <img src="assets/img/logo.png" alt="logo Amazon" class="footerLogo">
         </div>
