v.3 prima consegna // html quasi ultimato // esercizi js in progress

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <img src="assets/img/logo.png" alt="logo Amazon" class="footerLogo">
         </div>
     </footer>
+    <script src="assets/js.Esercizio/progetto.settimana2.js"></script>
 </body>
 
 </html>
