--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
         </div>
         <div class="holidayGuides">
             <h1>Holiday Gift Guides</h1>
-            <h2>be a go-Gifter</h2>
+            <h2>Be a go-gifter</h2>
         </div>
         <div class="perfectGift"><img src="./assets/img/img_1.jpg" alt="foto Kindle"><img src="./assets/img/img_2.jpg"
                 alt="foto Studio"><img src="./assets/img/img_3.jpg" alt="foto Smartwatch"><img
                 src="./assets/img/img_4.jpg" alt="foto Pets"></div>
-        <div class="gameGift">
+        <div class="newGift">
             <img src="assets/img/img_9.png" alt="Immagine Regalo VR">
             <figcaption class="caption">Play the gifting game <span class="fakeLink">Shop gaming</span></figcaption>
         </div>
-        <div class="soundGift"><img src="assets/img/img_10.png" alt="Immagine Regalo Sound">
-            <figcaption class="caption">Play the gifting game <span class="fakeLink">Shop gaming</span></figcaption>
+        <div class="newGift"><img src="assets/img/img_10.png" alt="Immagine Regalo Sound">
+            <figcaption class="caption">Play the gifting game <span class="fakeLink">Shop Audio & Accessories</span></figcaption>
         </div>
 
     </main>
@@ -69,5 +69,4 @@
     </footer>
     <script src="assets/js.Esercizio/progetto.settimana2.js"></script>
 </body>
-
 </html>
